<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeScreen"
        android:contentDescription="@string/title_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/addScreen"
        android:icon="@drawable/ic_add"
        android:contentDescription="@string/cd_add"
        android:title="@string/title_add" />
    <item
        android:id="@+id/myPetsScreen"
        android:icon="@drawable/ic_my_pets"
        android:contentDescription="@string/cd_myPets"
        android:title="@string/title_myPets" />
    <item
        android:id="@+id/adoptionsReq"
        android:icon="@drawable/ic_mail"
        android:contentDescription="@string/adoptions"
        android:title="@string/adoptions" />
    <item
        android:id="@+id/profileScreen"
        android:icon="@drawable/ic_profile"
        android:contentDescription="@string/title_profile"
        android:title="@string/title_profile" />
</menu>