<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeScreen"
        android:contentDescription="@string/title_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/iaScreen"
        android:icon="@drawable/ic_search"
        android:contentDescription="@string/ia"
        android:title="@string/ia"/>
    <item
        android:id="@+id/savedScreen"
        android:icon="@drawable/ic_my_pets"
        android:contentDescription="@string/saved_pets"
        android:title="@string/saved_pets" />
    <item
        android:id="@+id/profileScreen"
        android:icon="@drawable/ic_profile"
        android:contentDescription="@string/title_profile"
        android:title="@string/title_profile" />
</menu>