<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Campo de Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:boxStrokeColor="@color/green"
        app:boxBackgroundColor="@android:color/white"
        app:hintTextColor="@color/green"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de Description -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:boxStrokeColor="@color/green"
        app:boxBackgroundColor="@android:color/white"
        app:hintTextColor="@color/green"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de Color -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/colorInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/color"
        app:boxStrokeColor="@color/green"
        app:boxBackgroundColor="@android:color/white"
        app:hintTextColor="@color/green"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/colorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de Special Cares -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/specialCaresInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/special_cares"
        app:boxStrokeColor="@color/green"
        app:boxBackgroundColor="@android:color/white"
        app:hintTextColor="@color/green"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/specialCaresEditText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Spinner de Breed -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/breedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/breed"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_breed_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/size"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_sizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sizes"
                android:minHeight="60dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/age"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_ages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/ages"
                android:minHeight="60dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:checkedButton="@+id/radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog"
            android:layout_marginEnd="40dp"/>

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat"/>
        </RadioGroup>
        <TextView
            android:id="@+id/sexTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"/>
        <RadioGroup
            android:id="@+id/radioGroup2"
            android:checkedButton="@+id/radio_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginEnd="40dp"/>

            <RadioButton
                android:id="@+id/radio_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>