<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- Primera línea de textos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Golden Retriever" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" • " />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" • " />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5 years" />
    </LinearLayout>

    <!-- Segunda línea de textos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Big" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" • " />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" • " />

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" • " />

        <TextView
            android:id="@+id/province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Heredia" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_background"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/descriptionDetailText"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/special_cares"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/specialCaresText"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/search_background"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/SpecialCaresDetailText"
        android:textColor="@android:color/black"
        android:textStyle="bold" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="10dp"
            android:text="Interested Person"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mypets_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mypets_form_name_noeditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"
                android:text="Juan Perez"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mypets_form_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/location"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mypets_form_location_noeditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"
                android:text="Heredia"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mypets_form_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/phone_number"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mypets_form_phone_noeditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"
                android:text="+506 83463477"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mypets_form_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mypets_form_mail_noeditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"
                android:text="Juanperez14@gmail.com"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mypets_descriptionform_noeditable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/description"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/specialCaresEditText"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:clickable="false"
                android:focusable="false"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:textColor="@color/black"
                android:text="@string/personRequest"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginVertical="40dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accept_request_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/GreenButton"
            android:text="@string/accept_request"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp"
            app:rippleColor="@color/GreenButton" />

        <Button
            android:id="@+id/decline_request_button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_button"
            android:text="@string/decline_request"
            android:textColor="@color/white"
            android:textColorLink="@color/GreenButton"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
